--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/BodyStartScreenStyle"
-    tools:context=".ui.main.MainActivity">
+    tools:context=".ui.main.activity.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
