--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,8 +16,10 @@
     <dimen name="dm36">36dp</dimen>
     <dimen name="dm44">44dp</dimen>
     <dimen name="dm45">45dp</dimen>
+    <dimen name="dm48">48dp</dimen>
     <dimen name="dm52">52dp</dimen>
     <dimen name="dm54">54dp</dimen>
+    <dimen name="dm56">56dp</dimen>
     <dimen name="dm60">60dp</dimen>
     <dimen name="dm102">102dp</dimen>
     -- size for strings
