--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -307,4 +307,51 @@
         <item name="contentDescription">@null</item>
     </style>
 
+    <style name="audio_player_button_add" >
+        <item name="android:src">@drawable/playlist_add_up</item>
+    </style>
+
+    <style name="audio_player_button_like" >
+        <item name="android:src">@drawable/like_up</item>
+    </style>
+
+    -- style for MediatechActivity
+    <style name="mediatech_tablayout" >
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textColor">@color/dark_item</item>
+        <item name="background">@color/white</item>
+        <item name="tabIndicatorColor">@color/dark_item</item>
+        <item name="android:backgroundTint">@color/white</item>
+        <item name="tabSelectedTextColor">@color/dark_item</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="tabIndicator">@drawable/tablayout_indicator</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="mediatech_fragment" >
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="background">@color/white</item>
+        <item name="android:textSize">19sp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
+
+    <style name="mediatechToolBarStyle">
+        <item name="theme">@style/ThemeOverlay.AppCompat.Dark</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textFontWeight">500</item>
+    </style>
+
+    <style name="ToolbarTextAppearance">
+        <item name="android:fontFamily">@font/ys_medium</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:shadowColor">@color/black</item>
+    </style>
+
+    <style name="ToolbarTextAppearance.Title">
+        <item name="android:textSize">@dimen/ln22</item>
+    </style>
+
 </resources>
