--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -14,15 +14,27 @@
         android:id="@+id/settingsFragment"
         android:name="com.practicum.playlistmaker.ui.settings.fragment.SettingsFragment"
         android:label="@string/settings_title"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings" >
+        <action
+            android:id="@+id/action_settingsFragment_to_mediaFragment2"
+            app:destination="@id/mediaFragment" />
+    </fragment>
     <fragment
         android:id="@+id/searchFragment"
         android:name="com.practicum.playlistmaker.ui.search.fragment.SearchFragment"
         android:label="@string/search_title"
-        tools:layout="@layout/fragment_search"/>
+        tools:layout="@layout/fragment_search" >
+        <action
+            android:id="@+id/action_searchFragment_to_mediaFragment2"
+            app:destination="@id/mediaFragment" />
+        <action
+            android:id="@+id/action_searchFragment_to_activityPlayer"
+            app:destination="@id/activityPlayer" />
+    </fragment>
     <activity
-        android:id="@+id/playerActivity"
+        android:id="@+id/activityPlayer"
         android:name="com.practicum.playlistmaker.ui.player.activity.PlayerActivity"
         android:label="@string/title_activity_player"
-        tools:layout="@layout/activity_player" />
+        tools:layout="@layout/activity_player"/>
+
 </navigation>
