--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mediaFragment"
-        android:name="com.practicum.playlistmaker.ui.mediatech.fragments.MediatechFragment"
+        android:name="com.practicum.playlistmaker.ui.mediatech.fragment.MediatechFragment"
         android:label="@string/title_mediatech"
         tools:layout="@layout/fragment_mediatech" >
         <action
