--- a/app/src/main/res/layout/media_fragment_favorite_tracks.xml
+++ b/app/src/main/res/layout/media_fragment_favorite_tracks.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/mediatechLinearLayout">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFavouriteTracks"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/dm8"
+        android:visibility="visible"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/view_track" />
 
     <ImageView
         android:id="@+id/iv_placeholder"
