--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/PlayerActivityStyle"
-    tools:context=".ui.player.activity.PlayerActivity">
+    tools:context=".ui.player.fragment.PlayerFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/left_guideline"
@@ -35,21 +35,15 @@
         android:orientation="vertical"
         app:layout_constraintGuide_end="@dimen/dm16" />
 
-    <ImageButton
-        android:id="@+id/back_button"
-        style="@style/backButton"
-        android:contentDescription="@null"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ImageView
         android:id="@+id/cover"
         style="@style/coverImage"
+        android:layout_marginTop="82dp"
         android:contentDescription="@null"
         app:layout_constraintBottom_toTopOf="@id/track_name"
         app:layout_constraintEnd_toEndOf="@id/right_guideline"
         app:layout_constraintStart_toStartOf="@id/left_guideline"
-        app:layout_constraintTop_toBottomOf="@id/back_button"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/album_3x" />
 
     <TextView
