--- a/app/src/main/res/navigation/root_navigation_graph.xml
+++ b/app/src/main/res/navigation/root_navigation_graph.xml
@@ -9,13 +9,16 @@
         android:id="@+id/mediaFragment"
         android:name="com.practicum.playlistmaker.ui.mediatech.fragment.MediatechFragment"
         android:label="@string/title_mediatech"
-        tools:layout="@layout/fragment_mediatech" >
+        tools:layout="@layout/fragment_mediatech">
         <action
             android:id="@+id/action_mediaFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
         <action
             android:id="@+id/action_mediaFragment_to_searchFragment"
             app:destination="@id/searchFragment" />
+        <action
+            android:id="@+id/action_mediaFragment_to_playerFragment"
+            app:destination="@id/playerFragment" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
@@ -26,16 +29,20 @@
         android:id="@+id/searchFragment"
         android:name="com.practicum.playlistmaker.ui.search.fragment.SearchFragment"
         android:label="@string/search_title"
-        tools:layout="@layout/fragment_search" >
+        tools:layout="@layout/fragment_search">
         <action
             android:id="@+id/action_searchFragment_to_activityPlayer"
-            app:destination="@id/activityPlayer">
-        </action>
+            app:destination="@id/playerFragment" />
     </fragment>
-    <activity
+    <fragment
+        android:id="@+id/playerFragment"
+        android:name="com.practicum.playlistmaker.ui.player.fragment.PlayerFragment"
+        android:label="">
+    </fragment>
+    <!--<activity
         android:id="@+id/activityPlayer"
         android:name="com.practicum.playlistmaker.ui.player.activity.PlayerActivity"
         android:label="@string/title_activity_player"
-        tools:layout="@layout/activity_player"/>
+        tools:layout="@layout/activity_player" />-->
 
 </navigation>
