--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -400,4 +400,23 @@
         <item name="itemTextColor">@drawable/bottom_navigation_tab_bar</item>
     </style>
 
+    -- Style for PlayList
+    <style name="Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+        <item name="android:layout_marginTop">@dimen/dm24</item>
+        <item name="android:backgroundTint">@color/dark_item</item>
+        <item name="android:paddingHorizontal">14dp</item>
+        <item name="android:paddingVertical">10dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/ln14</item>
+        <item name="cornerRadius">54dp</item>
+        <item name="fontFamily">@font/ys_medium</item>
+        <item name="fontWeight">500</item>
+        <item name="iconTint">@color/black</item>
+    </style>
+
 </resources>
